added remove task functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-header [addTodo]="addTodo.bind(this)"></app-header>
-<app-todos-section [todos]="todos"></app-todos-section>
+<app-todos-section [todos]="todos" [removeTodo]="removeTodo.bind(this)"></app-todos-section>
