--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container-fluid">
-        <input class="form-control" [(ngModel)]="newTask" type="text" placeholder="Enter your task here" />
+        <input class="form-control" (keyup.enter)="addNewTask()" [(ngModel)]="newTask" type="text" placeholder="Enter your task here" />
         <button id="add" type="submit" aria-label="Add a task" (click)="addNewTask()">
             <i class="fa fa-plus text-white fs-19"></i>
         </button>
